# django-ninja-boilerplate

./: Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: admin.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  base.py  user.py
api/v1/: api.py  urls.py
config/: asgi.py  urls.py
config/settings/: local.py  test.py
